# poetry-issue-3218

./: .gitignore  Dockerfile  Makefile  README.md  reproduce_issue.sh
mytest/: pyproject.toml
mytest/tests/: test_mytest.py
