[tool.poetry]
name = "mytest"
version = "0.1.0"
description = ""
authors = ["Me"]

[tool.poetry.dependencies]
python = ">=2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[tool.poetry.scripts]
mytest = "mytest.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
